Split the resolver into two and fixed some issues with them.

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@
 
 /Trollveggen/obj/Debug
 *.suo
+/Trollveggen/bin/Debug/Trollveggen.dll
+/Trollveggen/bin/Debug/Trollveggen.pdb
+/Trollveggen/bin/Debug/Trollveggen.pri
